# Tales-of-Benegroth

./: .gitignore  Benegroth Adventure.sln  Benegroth Adventure.vcxproj  Benegroth Adventure.vcxproj.filters  CMakeLists.txt  README.md  cmake_install.cmake  deploy.sh
Assets/: Humanoid.xcf  example.theme  patch.txt  shader.frag
Source/: Actor.cpp  Actor.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Inventory.cpp  Inventory.h  Memory.cpp  Memory.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  Sprite.cpp  Sprite.h  game.h  main.cpp  tools.cpp  tools.h
